added weekly deltas and completion %s to weekly data table

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -153,3 +153,9 @@ a.dropdown-item:visited{
 	width: 66vw;
 	margin-top: 4vh;
 }
+
+
+.pers-best-cell{
+	background-color: orange;
+	color: #000;
+}
