weekly review table coloring for min and max

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -156,6 +156,11 @@ a.dropdown-item:visited{
 
 
 .pers-best-cell{
-	background-color: orange;
+	background-color: #FFB90F;
+	color: #000;
+}
+
+.pers-worst-cell{
+	background-color: red;
 	color: #000;
 }
