--- a/app/views/review/last_week.html.erb
+++ b/app/views/review/last_week.html.erb
@@ -158,7 +158,7 @@
 				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
 				return "translate(" + translate + ")";
 			})
-			.style("fill","orange")
+			.style("fill","#FBA16C")
 
 	var text = svg.selectAll("text")
 		.data(data)
@@ -220,7 +220,7 @@
 				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
 				return "translate(" + translate + ")";
 			})
-			.style("fill","orange")
+			.style("fill","#FBA16C")
 
 	var text = svg.selectAll("text")
 		.data(data)
@@ -282,7 +282,7 @@
 				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
 				return "translate(" + translate + ")";
 			})
-			.style("fill","orange")
+			.style("fill","#FBA16C")
 
 	var text = svg.selectAll("text")
 		.data(data)
@@ -344,7 +344,7 @@
 				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
 				return "translate(" + translate + ")";
 			})
-			.style("fill","orange")
+			.style("fill","#FBA16C")
 
 	var text = svg.selectAll("text")
 		.data(data)
@@ -408,7 +408,7 @@
 				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
 				return "translate(" + translate + ")";
 			})
-			.style("fill","orange")
+			.style("fill","#FBA16C")
 
 	var text = svg.selectAll("text")
 		.data(data)
@@ -460,7 +460,7 @@
 				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
 				return "translate(" + translate + ")";
 			})
-			.style("fill","orange")
+			.style("fill","#FBA16C")
 
 	var text = svg.selectAll("text")
 		.data(data)
@@ -522,7 +522,7 @@
 				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
 				return "translate(" + translate + ")";
 			})
-			.style("fill","orange")
+			.style("fill","#FBA16C")
 
 	var text = svg.selectAll("text")
 		.data(data)
@@ -584,7 +584,7 @@
 				var translate = [(((barWidth + barPadding) * i) + barPadding), 0];
 				return "translate(" + translate + ")";
 			})
-			.style("fill","orange")
+			.style("fill","#FBA16C")
 
 	var text = svg.selectAll("text")
 		.data(data)
