fixed bug that was breaking the homepage. the new update outstanding records method forgot to create the day's sleep and hrv records. also added a Consumption model validation to delete the untracked consumption record when any consumption record is created with the same date value

--- a/app/views/consumptions/partials/_today_consumption_summary.html.erb
+++ b/app/views/consumptions/partials/_today_consumption_summary.html.erb
@@ -13,7 +13,7 @@
 			<% Consumption.todays_consumption_records.each{|consumption| %>
 				<tr>
 					<td>
-						<%= consumption.description %>	
+						<%= link_to consumption.description, consumption %>	
 					</td>
 					<td>
 						<%= consumption.win %>	
