Create range report which allows user to run reports for arbitrary date ranges

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -164,3 +164,22 @@ a.dropdown-item:visited{
 	background-color: red;
 	color: #000;
 }
+
+
+.spacer{
+	font-size: 0; 
+    height: 200px;
+    line-height: 0;
+}
+
+
+
+
+.review-table{
+	margin: auto;
+
+	td{
+		padding: 0px 22px;
+		text-align: center;
+	}
+}
