--- a/app/views/journal_entries/_mini_form.html.erb
+++ b/app/views/journal_entries/_mini_form.html.erb
@@ -11,22 +11,15 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :prompt_id %>
-    <%= form.number_field :prompt_id %>
+  <div class="form-group">
+    <%= form.select :prompt_id, Prompt.all.collect{|prompt| [prompt.content,prompt.id]}, class: "form-control" %>
   </div>
 
-  <div class="field">
-    <%= form.label :prompt_id %>
-    <%= form.select :prompt_id, Prompt.all.collect{|prompt| [prompt.content,prompt.id]} %>
+  <div class="form-group">
+    <%= form.rich_text_area :content, class: "form-control" %>
   </div>
 
-  <div class="field">
-    <%= form.label :content %>
-    <%= form.rich_text_area :content %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="actions" align="center">
+    <%= form.submit "Create", class: "btn btn-primary btn-lg" %>
   </div>
 <% end %>
