--- a/app/views/layouts/_journal_navbar.html.erb
+++ b/app/views/layouts/_journal_navbar.html.erb
@@ -1,40 +1,23 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="journal_entries">journal</a>
+  <a class="navbar-brand" href="/">waey</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="/consumptions">Bubble Index</a>
-      </li>
+      </li> -->
       <li class="nav-item">
-        <a class="nav-link" href="/exercises">Button Index</a>
+        <a class="nav-link" href="/journal_entries/home">Entries</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="/dailies">Traditional Index</a>
-      </li>
+      </li> -->
       <li class="nav-item">
-        <a class="nav-link" href="/dailies/alcohol_index">Waey</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Waey
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/review/range_form">Date Range</a>
-          <a class="dropdown-item" href="/weekly_data">Weekly Data</a>
-          <a class="dropdown-item" href="/review/this_week">This Week</a>
-          <a class="dropdown-item" href="/review/last_week">Last Week</a>
-          <a class="dropdown-item" href="/review/trailing_seven_days">Trailing 7-day</a>
-          <a class="dropdown-item" href="/review/this_year_to_date">Year to Date</a>
-        </div>
+        <a class="nav-link" href="/prompts/button_index">Prompts</a>
       </li>
     </ul>
   </div>
-  <a class="navbar-brand" href="/">waey</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 </nav>
