--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <% if controller.controller_name == 'journal_entries' %>
+    <% if controller.controller_name == 'journal_entries' or controller.controller_name == 'prompts' %>
       <%= render partial: 'layouts/journal_navbar' %>
     <% else %>
       <%= render partial: 'layouts/waey_navbar' %>
