--- a/app/views/prompts/_form.html.erb
+++ b/app/views/prompts/_form.html.erb
@@ -11,12 +11,18 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+<table align="center">
+  <tr>
+    <td>
+      <div class="form-group">
+        <%= form.text_field :content, class: "form-control", placeholder: "name your new prompt" %>
+      </div>
+    </td>
+    <td>
+      <div class="actions" align="left">
+        <%= form.submit "Create Prompt", class: "btn btn-primary btn-md" %>
+      </div>
+    </td>
+  </tr>
+</table>
 <% end %>
