--- a/app/views/prompts/button_index.html.erb
+++ b/app/views/prompts/button_index.html.erb
@@ -5,4 +5,8 @@
 		<% prompt = Prompt.where(id: prompt_id)[0] %>
 		<%= link_to prompt.content, prompt, class: "btn btn-success btn-md" %>
 	<% } %>
+
+    <div class="right-aligned-btn">
+      <%= link_to "new prompt", new_prompt_path, class: "btn btn-primary btn-md" %>
+    </div>
 </div>
