--- a/app/views/journal_entries/_mini_form.html.erb
+++ b/app/views/journal_entries/_mini_form.html.erb
@@ -2,7 +2,6 @@
   <% if journal_entry.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(journal_entry.errors.count, "error") %> prohibited this journal_entry from being saved:</h2>
-
       <ul>
         <% journal_entry.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -12,14 +11,14 @@
   <% end %>
 
   <div class="form-group">
-    <%= form.select :prompt_id, Prompt.all.collect{|prompt| [prompt.content,prompt.id]}, class: "form-control" %>
+    <%= form.select :prompt_id, Prompt.all.collect{|prompt| [prompt.content,prompt.id]}, {}, {class: "prompt-select form-control"} %>
   </div>
 
   <div class="form-group">
     <%= form.rich_text_area :content, class: "form-control" %>
   </div>
 
-  <div class="actions" align="center">
-    <%= form.submit "Create", class: "btn btn-primary btn-lg" %>
+  <div class="right-aligned-btn">
+    <%= form.submit "Create", class: "btn btn-primary btn-md" %>
   </div>
 <% end %>
