--- a/app/views/prompts/show.html.erb
+++ b/app/views/prompts/show.html.erb
@@ -4,16 +4,20 @@
   <%= @prompt.content %>
 </h1>
 
-<h2 class="journal-entry-show-prompt page-title">New Post</h2>
-<%= render partial: 'journal_entries/prompt_populated_form', locals: {journal_entry: JournalEntry.new, prompt: @prompt} %>
+<div class="new-post-form-container">
+	<%= render partial: 'journal_entries/prompt_populated_form', locals: {journal_entry: JournalEntry.new, prompt: @prompt} %>
+</div>
 
-<h2 class="journal-entry-show-prompt page-title">Previous Posts</h2>
+<div class="posts-feed-container">
+	<h2 class="journal-entry-show-prompt page-title">Previous Posts</h2>
+	<% JournalEntry.where(prompt_id: @prompt.id).order(updated_at: :desc).each{|entry| %>
+		<div class="post-feed-container">
+			<%= entry.updated_at.strftime("%a %d %b %Y") %> @ <%= entry.updated_at.strftime("%H:%M") %>
+			<%= entry.content %>
+		</div>
+	<% } %>
+</div>
 
-<% JournalEntry.where(prompt_id: @prompt.id).order(updated_at: :desc).each{|entry| %>
-	<%= entry.updated_at %><br>
-	<%= entry.content %><br>
-	<hr>
-<% } %>
 
 <%= link_to 'Edit', edit_prompt_path(@prompt) %> |
 <%= link_to 'Back', prompts_path %>
