update sleep, hrv, exercise index pages, miniforms, edit pages. create global_constants.rb file in config/initializers to implement nooks age counter on nooks log.

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -265,3 +265,12 @@ trix-editor {
 		min-height: 25vh;
 	  	overflow-y: auto;
 	}
+
+
+
+.goal-achieved{
+	background-color: green;
+}
+.goal-not-achieved{
+	background-color: red;
+}
