--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -11,22 +11,27 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :date %>
-    <%= form.text_field :date, data: { behavior: "date-picker" } %>
-  </div>
-
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
-
-  <div class="field">
-    <%= form.label :total_minutes %>
-    <%= form.number_field :total_minutes %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="table-responsive">
+    <table class="form-partial">
+      <tr>
+        <td class="text-field-width">
+          <div class="form-group">
+            <%= form.text_field :description, placeholder: "description", class: "form-control" %>
+          </div>
+        </td>
+        <td class="text-field-width">
+          <div class="form-group">
+            <%= form.number_field :total_minutes, placeholder: "total mins", class: "form-control" %>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2" class="button-cell">
+          <div class="actions">
+            <%= form.submit "log", class: "btn btn-info btn-md short-text-button" %>
+          </div>
+        </td>
+      </tr>
+    </table>
   </div>
 <% end %>
