--- a/app/views/hrvs/_form.html.erb
+++ b/app/views/hrvs/_form.html.erb
@@ -11,17 +11,22 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :date %>
-    <%= form.text_field :date, data: { behavior: "date-picker" } %>
-  </div>
-
-  <div class="field">
-    <%= form.label :hrv %>
-    <%= form.number_field :hrv %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="table-responsive">
+    <table class="form-partial">
+      <tr>
+        <td class="text-field-width">
+            <div class="form-group">
+              <%= form.number_field :hrv, placeholder: "hrv", class: "form-control" %>
+            </div>
+        </td>
+      </tr>
+      <tr>
+        <td class="button-cell">
+          <div class="actions">
+            <%= form.submit "log", class: "btn btn-info btn-md short-text-button" %>
+          </div>
+        </td>
+      </tr>
+    </table>
   </div>
 <% end %>
