--- a/app/views/hrvs/edit.html.erb
+++ b/app/views/hrvs/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Hrv</h1>
+<h1 class="page-title">
+	Editing Hrv<br>
+	<%= @hrv.date.strftime("%A %d %B, %Y") %>
+</h1>
 
 <%= render 'form', hrv: @hrv %>
 
-<%= link_to 'Show', @hrv %> |
-<%= link_to 'Back', hrvs_path %>
+<div align="center">
+	<%= link_to 'Show', @hrv, class: "btn btn-warning btn-sm" %>
+	<%= link_to 'Back', hrvs_path, class: "btn btn-warning btn-sm" %>
+</div>
