--- a/app/views/prompts/show.html.erb
+++ b/app/views/prompts/show.html.erb
@@ -4,6 +4,10 @@
   <%= @prompt.content %>
 </h1>
 
+<% unless @nooks_age.empty? %>
+	<h2 class="journal-entry-show-prompt page-title"><%= @nooks_age %></h2>
+<% end %>
+
 <div class="new-post-form-container">
 	<%= render partial: 'journal_entries/prompt_populated_form', locals: {journal_entry: JournalEntry.new, prompt: @prompt} %>
 </div>
@@ -12,7 +16,7 @@
 	<h2 class="journal-entry-show-prompt page-title">Previous Posts</h2>
 	<% JournalEntry.where(prompt_id: @prompt.id).order(updated_at: :desc).each{|entry| %>
 		<div class="post-feed-container">
-			<%= entry.updated_at.strftime("%a %d %b %Y") %> @ <%= entry.updated_at.strftime("%H:%M") %>
+			<%= entry.updated_at.strftime("%a %d %b %Y") %> @ <%= entry.updated_at.strftime("%H:%M") %> (<i><%= link_to "edit", edit_journal_entry_path(entry) %></i>)
 			<%= entry.content %>
 		</div>
 	<% } %>
