--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -274,3 +274,17 @@ trix-editor {
 .goal-not-achieved{
 	background-color: red;
 }
+
+
+
+.nav-time-box{
+	border: dotted 1px black;
+	padding: 0.5vh 1vw;
+	margin-right: 1vw;
+	background-color: white;
+	color: black;
+
+	li{
+		padding: 0 1vw;
+	}
+}
