--- a/app/views/dailies/index.html.erb
+++ b/app/views/dailies/index.html.erb
@@ -28,57 +28,22 @@
             <td class="center-text"><%= value %></td>
             <td class="center-text"><%= value.strftime("%a") %></td>
           <% else %>
-            <% if value == true %>
+            <% if value.done == true %>
               <td class="center-text">
-                <%= fa_icon "check-square", size: '2x', style: 'color: green' %>
+                <%= link_to dailies_mark_undone_path(daily_id: value.id), class: "icon-link" do %>
+                  <%= fa_icon "check-square", size: '2x', style: 'color: green' %>
+                <% end %>  
               </td>
             <% else %>
               <td class="center-text">
-                <%= fa_icon "square", size: '2x', style: 'color: red' %>
+                <%= link_to dailies_mark_done_path(daily_id: value.id), class: "icon-link" do %>
+                  <%= fa_icon "square", size: '2x', style: 'color: red' %>
+                <% end %>
               </td>
             <% end %>
           <% end %>  
         <% } %>  
       </tr>
     <% } %>
-  </tbody>
-</table>
-
-
-<br><br><br>
-<hr>
-<br><br><br>
-
-<table class="index-table">
-  <thead>
-    <tr>
-      <th>date</th>
-      <th>dow</th>
-      <th>habit</th>
-      <th>done</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @dailies.each do |daily| %>
-      <tr>
-        <td class="center-text"><%= daily.date %></td>
-        <td class="center-text"><%= daily.date.strftime("%a") %></td>
-        <td class="center-text"><%= link_to daily.habit, daily %></td>
-        <td class="center-text">
-          <% if daily.done %>
-            <%= link_to dailies_mark_undone_path(daily_id: daily.id), class: "icon-link" do %>
-              <%= fa_icon "check-square", size: '2x', style: 'color: green' %>
-            <% end %>
-          <% else %>
-            <%= link_to dailies_mark_done_path(daily_id: daily.id), class: "icon-link" do %>
-              <%= fa_icon "square", size: '2x', style: 'color: red' %>
-            <% end %>
-          <% end %>
-        </td>
-        
-        
-      </tr>
-    <% end %>
   </tbody>
 </table>
