--- a/app/views/layouts/_journal_navbar.html.erb
+++ b/app/views/layouts/_journal_navbar.html.erb
@@ -19,10 +19,9 @@
         <a class="nav-link" href="/prompts/button_index">Prompts</a>
       </li>
     </ul>
-
     <ul class="nav navbar-nav navbar-right nav-time-box">
       <li>
-        <%= YEAR %>: 
+        <%= @thing %> <%= YEAR %>: 
       </li>
       <li>
         It's day <%= YEAR_DAY %> of <%= DAYS_IN_THIS_YEAR %> (<%= (YEAR_DAY / DAYS_IN_THIS_YEAR.to_f * 100.0).round() %>%)
